tests/baselines/reference/multiLineContextDiagnosticWithPretty.errors.txt
[96mmultiLineContextDiagnosticWithPretty.ts[0m:[93m2[0m:[93m5[0m - [91merror[0m[90m TS2353: [0mObject literal may only specify known properties, and 'a' does not exist in type '{ c: string; }'.

[7m2[0m     a: {
[7m [0m [91m    ~[0m


==== multiLineContextDiagnosticWithPretty.ts (1 errors) ====
    const x: {c: string} = {
        a: {
        ~
!!! error TS2353: Object literal may only specify known properties, and 'a' does not exist in type '{ c: string; }'.
            b: '',
        }
    };
    
Found 1 error in multiLineContextDiagnosticWithPretty.ts[90m:2[0m

